--- a/gradle.properties
+++ b/gradle.properties
@@ -9,8 +9,8 @@ parchment_minecraft_version=1.21.1
 parchment_mappings_version=2024.11.17
 # Environment Properties
 minecraft_version=1.21.1
-minecraft_version_range=[1.21.1]
-neo_version=21.1.215
+minecraft_version_range=[1.21,1.21.2)
+neo_version=21.1.197
 loader_version_range=[1,)
 ## Mod Properties
 mod_id=minedash
