--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,8 @@ loader_version_range=[1,)
 mod_id=minedash
 mod_name=MineDash
 mod_license=All Rights Reserved
-mod_version=1.0.0
+mod_version=0.1-alpha.1
 mod_group_id=com.iafenvoy.minedash
-mod_authors=YourNameHere, OtherNameHere
-mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
+mod_credits=RobTop
+mod_authors=IAFEnvoy
+mod_description=Play Geometry Dash in Minecraft
