--- a/src/main/templates/META-INF/neoforge.mods.toml
+++ b/src/main/templates/META-INF/neoforge.mods.toml
@@ -36,10 +36,10 @@ displayName = "${mod_name}" #mandatory
 #displayURL="https://change.me.to.your.mods.homepage.example.invalid/" #optional
 
 # A file name (in the root of the mod JAR) containing a logo for display
-logoFile="logo.png" #optional
+logoFile = "logo.png" #optional
 
 # A text field displayed in the mod UI
-credits="${mod_credits}" #optional
+credits = "${mod_credits}" #optional
 
 # A text field displayed in the mod UI
 authors = "${mod_authors}" #optional
@@ -83,6 +83,13 @@ modId = "minecraft"
 type = "required"
 # This version range declares a minimum of the current minecraft version up to but not including the next major version
 versionRange = "${minecraft_version_range}"
+ordering = "NONE"
+side = "BOTH"
+
+[[dependencies.${ mod_id }]]
+modId = "jupiter"
+type = "required"
+versionRange = "[2,)"
 ordering = "NONE"
 side = "BOTH"
 
