--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,8 @@ minecraft_version=1.21.1
 minecraft_version_range=[1.21,1.21.2)
 neo_version=21.1.197
 loader_version_range=[1,)
-## Mod Properties
+geckolib_version=4.8.2
+# Mod Properties
 mod_id=minedash
 mod_name=MineDash
 mod_license=All Rights Reserved
