--- a/build.gradle
+++ b/build.gradle
@@ -114,7 +114,7 @@ configurations {
 }
 
 dependencies {
-    implementation "maven.modrinth:jupiter:I4i9vhEW"
+    implementation "maven.modrinth:jupiter:bjogSV4z"
     implementation "software.bernie.geckolib:geckolib-neoforge-${minecraft_version}:${geckolib_version}"
 }
 
